--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/parent_layout"
     android:padding="10dp">
 
     <androidx.cardview.widget.CardView
@@ -29,12 +30,14 @@
                 android:layout_marginRight="8dp"
                 android:textColor="@color/black"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/playback_control_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -49,7 +52,7 @@
                     android:layout_height="50dp"
                     android:layout_weight="1"
                     android:id="@+id/play_back_pause"
-                    android:src="@drawable/play" />
+                    android:src="@drawable/pause" />
 
                 <ImageView
                     android:layout_width="50dp"
