--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -32,7 +32,11 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
                 android:textStyle="bold" />
-
+            <SeekBar
+                android:id="@+id/play_seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            
             <LinearLayout
                 android:id="@+id/playback_control_layout"
                 android:layout_width="match_parent"
