--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -34,6 +34,9 @@
                 android:textStyle="bold" />
             <SeekBar
                 android:id="@+id/play_seekbar"
+                android:progressTint="#4885ed"
+                android:thumbTint="#4885ed"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             
